QtWidget docs: small fixes

Apply some minor fixes to the widget docs
 - use nullptr
 - use c++11 initializer list
 - properly delete widget when cleaning the layout (QTBUG-29471)
 - rework CardLayout example to make it work with Qt5

Fixes: QTBUG-29471
Change-Id: Ie2ee9f75eb8faf97d2bbd2c25e7013d4f30d8dd0
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
Reviewed-by: Paul Wicking <paul.wicking@qt.io>