src/widgets/doc/snippets/code/src_gui_dialogs_qfiledialog.cpp
@@ -89,11 +89,10 @@ dialog.setNameFilter("*.cpp *.cc *.C *.cxx *.c++");
 
 
 //! [7]
-QStringList filters;
-filters << "Image files (*.png *.xpm *.jpg)"
-        << "Text files (*.txt)"
-        << "Any files (*)";
-
+const QStringList filters({"Image files (*.png *.xpm *.jpg)",
+                           "Text files (*.txt)",
+                           "Any files (*)"
+                          });
 QFileDialog dialog(this);
 dialog.setNameFilters(filters);
 dialog.exec();
@@ -131,10 +130,10 @@ QString dir = QFileDialog::getExistingDirectory(this, tr("Open Directory"),
 //! [12]
 
 //! [13]
-QStringList mimeTypeFilters;
-mimeTypeFilters << "image/jpeg" // will show "JPEG image (*.jpeg *.jpg *.jpe)
-            << "image/png"  // will show "PNG image (*.png)"
-            << "application/octet-stream"; // will show "All files (*)"
+QStringList mimeTypeFilters({"image/jpeg", // will show "JPEG image (*.jpeg *.jpg *.jpe)
+                             "image/png",  // will show "PNG image (*.png)"
+                             "application/octet-stream" // will show "All files (*)"
+                            });
 
 QFileDialog dialog(this);
 dialog.setMimeTypeFilters(mimeTypeFilters);
